syntax = "proto3";

message ClientMessage
{
    enum Type {
        //SCENE
        CANCEL_RENDERING = 0;
        //QUIT
    }
}

message RenderResult 
{
    enum Type {
        FRAME = 0;
        CANCELED = 1;
        DONE = 2;
    }
    
    Type    type = 1;
    
    // FRAME
    uint32  sample = 2;
    string  file_name = 3;
    uint32  file_size = 4;
}

// Scene

message SceneElement
{   
    enum Type {
        NONE = 0;
        MESH = 1;
        VOLUME = 2;
    }
    
    Type    type = 1;
    string  name = 2;
}

message MeshInfo
{
    enum Flags {
        NONE = 0;
        NORMALS = 1;
        VERTEX_COLORS = 2;
        // = 4;
    }

    uint32          flags = 1;
    repeated float  object2world = 2;
    string          properties = 3;
    string          object_name = 4;
    string          mesh_name = 5;
    
    uint32          num_vertices = 6;
    uint32          num_triangles = 7;
}

message VolumeInfo
{
    uint32          flags = 1;
    repeated float  object2world = 2;
    string          properties = 3;
    string          object_name = 4;
    string          mesh_name = 5;
}

// Settings

message ImageSettings
{
    uint32  width = 1;
    uint32  height = 2;
    uint32  percentage = 3;
}

message CameraSettings
{
    // camera type

    repeated float position = 1;
    repeated float view_dir = 2;
    repeated float up_dir = 3;
    
    float fov_y = 4;                // Degrees
    
    float dof_focus_distance = 5;
    float dof_aperture = 6;
}

message RenderSettings
{
    string          renderer = 1;
    
    uint32          samples = 2;
    uint32          ao_samples = 3;
    
    repeated float  background_color = 4;   // RGB only atm
    
    bool            shadows_enabled = 5;
}

message Light 
{
    enum Type {
        POINT = 0;
        SUN = 1;
        SPOT = 2;
        AREA = 3;
    }
    
    Type            type = 1;
    repeated float  object2world = 2;
    string          object_name = 3;
    string          light_name = 4;
    
    
    // Common values
    repeated float  color = 10;
    float           intensity = 11;
    bool            visible = 12;
    
    // Per-type values
    repeated float  direction = 20;          // Directional, spot
    float           angular_diameter = 21;  // Directional
    repeated float  position = 22;          // Point/sphere, spot, quad
    float           radius = 23;            // Point/sphere, spot
    float           opening_angle = 24;     // Spot
    float           penumbra_angle = 25;    // Spot
    repeated float  edge1 = 26;             // Area/Quad
    repeated float  edge2 = 27;             // Area/Quad
}   

message LightSettings
{
    float           ambient_intensity = 1;
    repeated float  ambient_color = 2;
    
    repeated Light  lights = 3;
}

// Volume plugins

// Returned by load function in plugin
message VolumeLoadResult
{
    bool            success = 1;
    string          message = 2;
    
    string          hash = 3;
    repeated float  bbox = 4;
}



